freebsd-utils (7.1-4) UNRELEASED; urgency=low

  * Install a new bug control file to redirect bug report submissions to
    the freebsd-utils package.

 -- Guillem Jover <guillem@debian.org>  Mon, 13 Apr 2009 17:29:58 +0200

freebsd-utils (7.1-3) unstable; urgency=low

  [ Aurelien Jarno ]
  * Upload to unstable.
  * Don't use a tar in tar build system:
    - Remove fetch.
    - Add a get-orig-source target.
    - Update patches accordingly.
  * Fix a few bashisms in debian/rules.
  * Fix parallel build support in debian/rules.
  * Bumped Standards-Version to 3.8.1 (no changes).
  * /etc/init.d/freebsd-utils: mount /dev/fd, /proc and /sys if needed.
  * Remove kfreebsd-common and kldutils packages.

  [ Guillem Jover ]
  * Rework debian/copyright with detailed license and copyright information.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 11 Apr 2009 10:08:21 +0200

freebsd-utils (7.1-2) unreleased; urgency=low

  [ Guillem Jover ]
  * Line wrap Build-Depends and Replaces fields.
  * Switch to debhelper compatibility level 7.

  [ Aurelien Jarno ]
  * debian/control: move freebsd-hackedutils to suggests as it now
    contains almost nothing.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 05 Apr 2009 13:30:51 +0200

freebsd-utils (7.1-1) unreleased; urgency=low

  [ Petr Salinger ]
  * Based on FreeBSD 7.1.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 05 Jan 2009 10:58:46 +0100

freebsd-utils (7.0-3) unreleased; urgency=low

  [ Petr Salinger ]
  * glibc is fixed, drop workarounds, require fixed glibc.
  * Preparation for disks-encrypting.

  [ Aurelien Jarno ]
  * Depends on ufsutils to make sure it is installed on GNU/kFreeBSD
    systems.
  * Build-depends on freebsd-buildutils instead of freebsd6-buildutils.
  * debian/*.templates: rewrite short descriptions to comply with
    debian-policy.
  * debian/*.templates: use po-debconf.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 06 Aug 2008 18:29:00 +0200

freebsd-utils (7.0-2) unreleased; urgency=low
