@@ -28,12 +28,13 @@ Replaces: freebsd-hackedutils (<= 6.1-1)
 Description: FreeBSD utilities needed for GNU/kFreeBSD
  This package contains FreeBSD utilities needed for GNU/kFreeBSD.
 
-Package: module-init-tools
+Package: kldutils
 Priority: important
 Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: ${shlibs:Depends}, ${misc:Depends}, debconf, kfreebsd-image
-Replaces: kldutils (<< 6.0-2.really.5.4-0.6), freebsd-utils (<= 5.2.1-16),
+Replaces: module-init-tools, freebsd-utils (<= 5.2.1-16),
  freebsd-hackedutils (<= 6.1-1), kfreebsd-common (<< 6.1-6)
+Provides: module-init-tools
 Description: tools for managing kFreeBSD modules
  This package contains a set of programs for loading, inserting, and
  removing kernel modules for kFreeBSD.
@@ -45,12 +46,13 @@ Description: Command line tool to change keyboard layout
  Original FreeBSD command to set keyboard layout and the FreeBSD possible
  keyboards.
 
-Package: net-tools
+Package: freebsd-net-tools
 Section: net
 Priority: important
 Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Replaces: freebsd-utils (<< 5.4), freebsd-hackedutils (<= 6.1-1)
+Replaces: freebsd-utils (<< 5.4), freebsd-hackedutils (<= 6.1-1), net-tools
+Provides: net-tools
 Description: FreeBSD networking tools
  This package contains the FreeBSD tools needed to manage networking on
  GNU/kFreeBSD.
