@@ -12,7 +12,7 @@ fi
 
 get_module_description ()
 {
-  if line=`grep "^$1[[:space:]]" /usr/share/module-init-tools/module_descriptions` ; then
+  if line=`grep "^$1[[:space:]]" /usr/share/kldutils/module_descriptions` ; then
     echo ${line} | sed -e "s/^[^[:space:]]*[[:space:]]*/ (/g" -e "s/$/)/g"
   fi
   return 0
@@ -46,14 +46,14 @@ for i in `ls ${module_dir}/*.ko | sed -e "s,.*/,,g" -e "s/\.ko$//g"` ; do
   esac
 done
 
-db_subst module-init-tools/network choices "$network"
-db_input high module-init-tools/network || true
+db_subst kldutils/network choices "$network"
+db_input high kldutils/network || true
 db_go
 
-db_subst module-init-tools/sound choices "$sound"
-db_input high module-init-tools/sound || true
+db_subst kldutils/sound choices "$sound"
+db_input high kldutils/sound || true
 db_go
 
-db_subst module-init-tools/other choices "$other"
-db_input high module-init-tools/other || true
+db_subst kldutils/other choices "$other"
+db_input high kldutils/other || true
 db_go
