@@ -1,0 +1,3 @@
+etc/modules.d
+usr/sbin
+usr/share/kldutils
