@@ -1,6 +1,6 @@
 #! /bin/sh
 ### BEGIN INIT INFO
-# Provides:          module-init-tools
+# Provides:          kldutils
 # Required-Start:
 # Required-Stop:
 # Should-Start:      checkroot
