@@ -4,4 +4,4 @@ sbin/kldconfig/kldconfig	/sbin
 sbin/kldstat/kldstat		/bin
 debian/modules				/etc
 debian/scripts/sbin/snd_probe		/usr/sbin
-debian/module_descriptions		/usr/share/module-init-tools
+debian/module_descriptions		/usr/share/kldutils
