@@ -21,28 +21,31 @@ set -e
 
 get_modules ()
   {
-    test -e /etc/modules.d/module-init-tools || return 0
-    sed -e "s/#.*//g" -e "/^\( \|\t\)*$/d" /etc/modules.d/module-init-tools \
+    test -e /etc/modules.d/kldutils || return 0
+    sed -e "s/#.*//g" -e "/^\( \|\t\)*$/d" /etc/modules.d/kldutils \
       | tr "\n" ":" | sed -e "s/ /:/g" -e "s/^://g" -e s/:$//g -e "s/::*/:/g"
   }
 
 case "$1" in
     configure)
-      # Transition from the old package
+      # Transition from the old packages
       if [ -e /etc/modules.d/kfreebsd-config ] ; then
-         mv -f /etc/modules.d/kfreebsd-config /etc/modules.d/module-init-tools 
+         mv -f /etc/modules.d/kfreebsd-config /etc/modules.d/kldutils
+      fi
+      if [ -e /etc/modules.d/module-init-tools ] ; then
+         mv -f /etc/modules.d/module-init-tools /etc/modules.d/kldutils
       fi
 
       # Save modules that old file requested.  We might need to unload them
       old="`get_modules`"
-      cat > /etc/modules.d/module-init-tools << EOF
-# Do not edit this file!  It is automaticaly generated by module-init-tools
-# Use "dpkg-reconfigure module-init-tools" instead.
+      cat > /etc/modules.d/kldutils << EOF
+# Do not edit this file!  It is automaticaly generated by kldutils
+# Use "dpkg-reconfigure kldutils" instead.
 EOF
       for i in network sound other ; do
-        db_get module-init-tools/$i
+        db_get kldutils/$i
         for j in `echo "$RET" | sed -e "s/, /|/g" | tr "|" "\n" | sed -e "s/ .*//g"` ; do
-          echo "$j" >> /etc/modules.d/module-init-tools
+          echo "$j" >> /etc/modules.d/kldutils
         done
       done
       new="`get_modules`"
