@@ -1,4 +1,4 @@
-Template: module-init-tools/network
+Template: kldutils/network
 Type: multiselect
 Choices: ${choices}
 _Description: Network card drivers:
@@ -7,9 +7,9 @@ _Description: Network card drivers:
  .
  Note: You most likely don't need any, since default kernels currently include
  builtin support for many NICs.  You can always come back to this question later
- with "dpkg-reconfigure module-init-tools".
+ with "dpkg-reconfigure kldutils".
 
-Template: module-init-tools/sound
+Template: kldutils/sound
 Type: multiselect
 Choices: ${choices}
 _Description: Sound card drivers:
@@ -18,9 +18,9 @@ _Description: Sound card drivers:
  .
  Note: If you don't know, don't select any yet.  Later, you can use the
  snd_probe command to find it out.  You can always come back to this question
- with "dpkg-reconfigure module-init-tools".
+ with "dpkg-reconfigure kldutils".
 
-Template: module-init-tools/other
+Template: kldutils/other
 Type: multiselect
 Choices: ${choices}
 _Description: Other modules:
@@ -28,4 +28,4 @@ _Description: Other modules:
  cathegories. Select those you find adequate.
  .
  Note: If you don't know, don't select any yet.  You can always come back to
- this question with "dpkg-reconfigure module-init-tools".
+ this question with "dpkg-reconfigure kldutils".
