@@ -1,3 +1,0 @@
-etc/modules.d
-usr/sbin
-usr/share/module-init-tools
