@@ -2,6 +2,9 @@ freebsd-utils (7.1-4) UNRELEASED; urgency=low
 
   * Install a new bug control file to redirect bug report submissions to
     the freebsd-utils package.
+  * Rename module-init-tools to kldutils and net-tools to freebsd-net-tools,
+    as this is messing up the expectations of several services of equially
+    named binary coming from the same source package.
 
  -- Guillem Jover <guillem@debian.org>  Mon, 13 Apr 2009 17:29:58 +0200
 
